--- a/ios/IssueTracker/IssueTracker/Base.lproj/Main.storyboard
+++ b/ios/IssueTracker/IssueTracker/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -116,6 +117,64 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="138.46153846153845" y="109.47867298578198"/>
+        </scene>
+        <!--Issue Filter View Controller-->
+        <scene sceneID="Sei-3A-Xuq">
+            <objects>
+                <viewController storyboardIdentifier="IssueFilterViewController" id="rai-7y-7E3" customClass="IssueFilterViewController" customModule="IssueTracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Hiv-Eh-klV">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AwQ-MA-5hU">
+                                <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                                <items>
+                                    <navigationItem title="필터" id="XSP-PN-pI7">
+                                        <barButtonItem key="leftBarButtonItem" title="Item" id="T6T-AC-hl0"/>
+                                        <barButtonItem key="rightBarButtonItem" title="Item" id="zP0-bV-vpf"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="gds-gk-0SB">
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ij7-fM-5m5">
+                                    <size key="itemSize" width="128" height="128"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="ti6-9I-Vf5">
+                                        <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="D2a-lR-2Cc">
+                                            <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="UlH-dT-vFD"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="AwQ-MA-5hU" firstAttribute="trailing" secondItem="UlH-dT-vFD" secondAttribute="trailing" id="52k-lw-OR0"/>
+                            <constraint firstItem="gds-gk-0SB" firstAttribute="leading" secondItem="UlH-dT-vFD" secondAttribute="leading" id="D0Q-BF-ZFr"/>
+                            <constraint firstItem="gds-gk-0SB" firstAttribute="top" secondItem="AwQ-MA-5hU" secondAttribute="bottom" id="OIz-3l-gQ3"/>
+                            <constraint firstItem="UlH-dT-vFD" firstAttribute="trailing" secondItem="gds-gk-0SB" secondAttribute="trailing" id="RMk-Ko-hER"/>
+                            <constraint firstItem="UlH-dT-vFD" firstAttribute="bottom" secondItem="gds-gk-0SB" secondAttribute="bottom" id="Tc5-3Z-eTm"/>
+                            <constraint firstItem="AwQ-MA-5hU" firstAttribute="leading" secondItem="UlH-dT-vFD" secondAttribute="leading" id="uZ7-tF-5eg"/>
+                            <constraint firstItem="AwQ-MA-5hU" firstAttribute="top" secondItem="UlH-dT-vFD" secondAttribute="top" id="yjZ-iw-Bwz"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="collectionView" destination="gds-gk-0SB" id="CHK-bR-2yH"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Des-ms-dnJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="976.81159420289862" y="108.48214285714285"/>
         </scene>
     </scenes>
     <resources>
