--- a/ios/IssueTracker/IssueTracker/Base.lproj/Main.storyboard
+++ b/ios/IssueTracker/IssueTracker/Base.lproj/Main.storyboard
@@ -120,6 +120,95 @@
             </objects>
             <point key="canvasLocation" x="138.46153846153845" y="109.47867298578198"/>
         </scene>
+        <!--New Issue View Controller-->
+        <scene sceneID="6Xa-wW-tB7">
+            <objects>
+                <viewController storyboardIdentifier="NewIssueViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="5Cp-VQ-9m6" customClass="NewIssueViewController" customModule="IssueTracker" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tL3-Pe-1ke">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="251" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="LkM-k2-snb">
+                                <rect key="frame" x="67" y="59" width="331" height="25.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="boolean" keyPath="layer.masksToBounds" value="YES"/>
+                                    <userDefinedRuntimeAttribute type="color" keyPath="layer.borderColor">
+                                        <color key="value" systemColor="systemRedColor"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.borderWidth">
+                                        <integer key="value" value="10"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="제목" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="o5I-5k-akU">
+                                <rect key="frame" x="16" y="60" width="35" height="24"/>
+                                <fontDescription key="fontDescription" type="system" weight="medium" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a54-Jx-mUp">
+                                <rect key="frame" x="16" y="92.5" width="382" height="2"/>
+                                <color key="backgroundColor" red="0.93333333330000001" green="0.93333333330000001" blue="0.93725490199999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="2" id="NZ2-5Q-Kfx"/>
+                                </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="2hJ-fB-XAx">
+                                <rect key="frame" x="16" y="734" width="382" height="128"/>
+                                <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="h7W-uX-7Qg"/>
+                                </constraints>
+                                <connections>
+                                    <outlet property="dataSource" destination="5Cp-VQ-9m6" id="rIg-9A-M08"/>
+                                    <outlet property="delegate" destination="5Cp-VQ-9m6" id="lRX-eg-uxL"/>
+                                </connections>
+                            </tableView>
+                            <containerView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MHz-XW-UnV">
+                                <rect key="frame" x="16" y="102.5" width="382" height="588.5"/>
+                            </containerView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="추가 항목" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Ti-8b-9ky">
+                                <rect key="frame" x="16" y="699" width="382" height="27"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="22"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="TJi-Nv-F8M"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="LkM-k2-snb" firstAttribute="leading" secondItem="o5I-5k-akU" secondAttribute="trailing" constant="16" id="2Le-aN-5Qj"/>
+                            <constraint firstItem="2hJ-fB-XAx" firstAttribute="top" secondItem="3Ti-8b-9ky" secondAttribute="bottom" constant="8" id="JIp-Q3-dm9"/>
+                            <constraint firstItem="TJi-Nv-F8M" firstAttribute="trailing" secondItem="MHz-XW-UnV" secondAttribute="trailing" constant="16" id="L9M-8k-YZX"/>
+                            <constraint firstItem="a54-Jx-mUp" firstAttribute="top" secondItem="LkM-k2-snb" secondAttribute="bottom" constant="8" id="MBw-Yo-uy3"/>
+                            <constraint firstItem="2hJ-fB-XAx" firstAttribute="leading" secondItem="TJi-Nv-F8M" secondAttribute="leading" constant="16" id="NTx-Xb-1Ln"/>
+                            <constraint firstItem="o5I-5k-akU" firstAttribute="top" secondItem="TJi-Nv-F8M" secondAttribute="top" constant="16" id="Ul0-SQ-hdN"/>
+                            <constraint firstItem="o5I-5k-akU" firstAttribute="leading" secondItem="TJi-Nv-F8M" secondAttribute="leading" constant="16" id="fkp-ru-A2x"/>
+                            <constraint firstItem="3Ti-8b-9ky" firstAttribute="leading" secondItem="TJi-Nv-F8M" secondAttribute="leading" constant="16" id="hVw-zd-OKW"/>
+                            <constraint firstItem="LkM-k2-snb" firstAttribute="top" secondItem="TJi-Nv-F8M" secondAttribute="top" constant="15" id="kNL-sQ-bEv"/>
+                            <constraint firstItem="MHz-XW-UnV" firstAttribute="leading" secondItem="TJi-Nv-F8M" secondAttribute="leading" constant="16" id="kfj-hq-jtf"/>
+                            <constraint firstItem="3Ti-8b-9ky" firstAttribute="top" secondItem="MHz-XW-UnV" secondAttribute="bottom" constant="8" id="mKm-IS-R6J"/>
+                            <constraint firstItem="TJi-Nv-F8M" firstAttribute="trailing" secondItem="a54-Jx-mUp" secondAttribute="trailing" constant="16" id="pRp-7L-MTQ"/>
+                            <constraint firstItem="TJi-Nv-F8M" firstAttribute="bottom" secondItem="2hJ-fB-XAx" secondAttribute="bottom" id="pWB-1t-sZZ"/>
+                            <constraint firstItem="a54-Jx-mUp" firstAttribute="leading" secondItem="TJi-Nv-F8M" secondAttribute="leading" constant="16" id="qr1-pw-0je"/>
+                            <constraint firstItem="MHz-XW-UnV" firstAttribute="top" secondItem="a54-Jx-mUp" secondAttribute="bottom" constant="8" id="r6a-pX-fgM"/>
+                            <constraint firstItem="TJi-Nv-F8M" firstAttribute="trailing" secondItem="2hJ-fB-XAx" secondAttribute="trailing" constant="16" id="v0p-V6-KUk"/>
+                            <constraint firstItem="TJi-Nv-F8M" firstAttribute="trailing" secondItem="3Ti-8b-9ky" secondAttribute="trailing" constant="16" id="y5S-4n-AVk"/>
+                            <constraint firstItem="TJi-Nv-F8M" firstAttribute="trailing" secondItem="LkM-k2-snb" secondAttribute="trailing" constant="16" id="yHJ-1Z-cx2"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="containerView" destination="MHz-XW-UnV" id="4VJ-ia-Nrl"/>
+                        <outlet property="filteringTableView" destination="2hJ-fB-XAx" id="5II-d2-tLh"/>
+                        <outlet property="titleTextFiled" destination="LkM-k2-snb" id="4KC-aI-5z2"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3rO-8X-2fK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="976.81159420289862" y="108.48214285714285"/>
+        </scene>
     </scenes>
     <resources>
         <image name="archivebox" catalog="system" width="128" height="106"/>
@@ -130,6 +219,9 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
