feat: ✨New Issue 저장 전까지 구현(#106, #134)
이슈 목록창에서 '+' 버튼 클릭시 새로운 이슈를 작성할 수 있는 View Controller로 이동하며 마크다운 형식으로 작성할시 Preview를 통해 확인 할 수 있다.

텍스트 뷰를 길게 탭할시 'Insert Photo'를 지원하며 성공적으로 업로드 되면 바로 마크다운 형식으로 텍스트뷰에 삽입된다

--- a/ios/IssueTracker/IssueTracker/Base.lproj/Main.storyboard
+++ b/ios/IssueTracker/IssueTracker/Base.lproj/Main.storyboard
@@ -200,9 +200,9 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="containerView" destination="MHz-XW-UnV" id="4VJ-ia-Nrl"/>
-                        <outlet property="filteringTableView" destination="2hJ-fB-XAx" id="5II-d2-tLh"/>
-                        <outlet property="titleTextFiled" destination="LkM-k2-snb" id="4KC-aI-5z2"/>
+                        <outlet property="containerView" destination="MHz-XW-UnV" id="310-lq-p4c"/>
+                        <outlet property="filteringTableView" destination="2hJ-fB-XAx" id="oDe-0K-Y6c"/>
+                        <outlet property="titleTextField" destination="tL3-Pe-1ke" id="lvi-zV-CBh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3rO-8X-2fK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -234,6 +234,9 @@
                             <constraint firstItem="eFi-se-PvF" firstAttribute="leading" secondItem="jpy-7i-GUv" secondAttribute="leading" id="dpg-Mi-dJI"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="textView" destination="eFi-se-PvF" id="GrB-sK-GDI"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Bo8-ea-7KT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -261,6 +264,9 @@
                             <constraint firstItem="IEV-rY-Cqn" firstAttribute="bottom" secondItem="Htv-VU-X7W" secondAttribute="bottom" id="mV9-nL-xS3"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="markdownView" destination="Htv-VU-X7W" id="7cT-D8-oDf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pLm-9c-UVK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
